<resources>
    <string name="app_name">剪纸华容道</string>
    <string name="title">剪纸华容道</string>
    <string name="game_start">开始游戏</string>
    <string name="game_exit">退出游戏</string>
    <string name="about">关于</string>
    <string name="reset_button">重置棋盘</string>
    <string name="reset_toast">重置成功</string>
    <string name="title_activity_rank">排行榜</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"

    </string>
    <string name="action_settings">Settings</string>
    <string name="rank">排行榜</string>
</resources>
